UPDATED information the the website to match agriculture ai asistant instead

--- a/index.html
+++ b/index.html
@@ -7,13 +7,21 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.svg" />
     <meta name="theme-color" content="#22c55e" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="AI-powered farming assistant for African farmers. Monitor crop health, get personalized farming tips, and optimize your yield with smart technology."
+    />
+    <meta
+      name="keywords"
+      content="farming, agriculture, AI, crop monitoring, African farmers, yield optimization, sustainable farming"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Poppins:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
-    <title>Yene Steps</title>
+    <title>YeneSteps - AI-Powered Farming Assistant for Africa</title>
   </head>
   <body>
     <div id="root"></div>
