--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Poppins:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
-    <title>YeneSteps - AI-Powered Farming Assistant for Africa</title>
+    <title>AwakiFarmer - AI-Powered Farming Assistant for Africa</title>
   </head>
   <body>
     <div id="root"></div>
